# flux-accounting

./: .gitignore  .mergify.yml  .travis.yml  .typos.toml  AUTHORS  CONTRIBUTING.md  MAINTAINERS.md  Makefile  Makefile.am  NEWS  NEWS.md  README  README.md  codecov.yml  configure.ac  setup.py  tox.ini
cmd/: fairshare.py  (+1 more)
src/: Makefile.am  create_db.py  write_jobs.py
src/accounting/: Makefile.am  accounting_cli.py  accounting_cli_functions.py  create_db.py  flux-account.py
src/accounting/test/: test_bank_subcommands.py  test_create_db.py  test_example.py  test_job_archive_interface.py  test_user_subcommands.py
src/bindings/python/: Makefile.am
src/cmd/: Makefile.am  flux-account-compute-hours-update.py  flux-account-export-db.py  flux-account-fetch-job-records.py  flux-account-pop-db.py  flux-account-priority-update.py  flux-account-service.py  flux-account-update-db.py  flux-account-update-usage.py  flux-account.py  flux_account_shares.cpp  flux_account_update_fshare.cpp  flux_update_fshare.cpp
src/common/: Makefile.am
src/fairness/: Makefile.am
src/fairness/account/: account.cpp  account.hpp
src/fairness/print_hierarchy/: Makefile.am  flux_account_shares.cpp  flux_shares.cpp  print_hierarchy.cpp  test-print-hierarchy.sh
src/fairness/reader/: Makefile.am  data_reader_base.cpp  data_reader_base.hpp  data_reader_db.cpp  data_reader_db.hpp
src/fairness/weighted_tree/: Makefile.am  weighted_tree.cpp  weighted_tree.hpp  weighted_walk.cpp  weighted_walk.hpp
src/fairness/writer/: data_writer_base.cpp  data_writer_base.hpp  data_writer_db.cpp  data_writer_db.hpp  data_writer_stdout.cpp  data_writer_stdout.hpp
src/plugins/: Makefile.am  accounting.cpp  accounting.hpp  bank_info.cpp  bank_info.hpp  bulk_update.py  compute_hours_limits.cpp  jj.cpp  jj.hpp  job.cpp  job.hpp  mf_priority.cpp
src/plugins/test/: accounting_test01.cpp  banks_test04.cpp  dependencies_test03.cpp  job_test02.cpp  queue_limits_test05.cpp  user_bank_info_test01.cpp
src/test/: checks-annotate.sh  checks-lib.sh  checks_run.sh  generate-matrix.py
src/test/docker/: README.md  docker-run-checks.sh
t/: Makefile.am  t0000-sharness.t  t1000-print-hierarchy.t  t1001-mf-priority-basic.t  t1001-mf-priority.t  t1002-mf-priority-small-no-tie.t  t1003-mf-priority-small-tie.t  t1004-mf-priority-small-tie-all.t  t1005-max-jobs-limits.t  t1006-update-fshare.t  t1007-flux-account-users.t  t1007-flux-account.t  t1008-mf-priority-update.t  t1009-pop-db.t  t1010-update-usage.t  t1011-job-archive-interface.t  t1012-mf-priority-load.t  t1013-mf-priority-queues.t  t1014-mf-priority-dne.t  t1015-mf-priority-disable-entry.t  t1015-mf-priority-urgency.t  t1015-mf-priority-weights.t  t1016-export-db.t  t1017-update-db.t  t1018-mf-priority-disable-entry.t  t1019-mf-priority-info-fetch.t  t1020-mf-priority-config.t  t1020-mf-priority-issue262.t  t1021-mf-priority-age.t  t1021-mf-priority-issue332.t  t1022-mf-priority-issue346.t  t1023-flux-account-banks.t  t1024-flux-account-queues.t  t1025-flux-account-projects.t  t1026-flux-account-perms.t  t1027-mf-priority-issue376.t  t1028-mf-priority-issue385.t  t1029-mf-priority-default-bank.t  t1030-mf-priority-update-queue.t  t1031-mf-priority-issue406.t  (+88 more)
t/expected/: after_bank_delete.expected  before_delete.expected  custom_small_tie_parsable.txt  help_message.txt  out_of_insert_order.txt  post_fshare_update.expected  small_no_tie.txt  small_no_tie_parsable.txt  small_tie.txt  small_tie_all.txt  small_tie_all_parsable.txt  small_tie_parsable.txt
t/expected/flux_account/: A_bank.expected  D_bank.expected  E_bank.expected  F_bank_tree.expected  F_bank_users.expected  deleted_bank.expected  deleted_user.expected  full_hierarchy.expected  root_bank.expected
t/expected/job_usage/: no_jobs.expected  post_update1.expected  pre_update.expected
t/expected/plugin_state/: internal_state_1.expected  internal_state_3.expected
t/expected/pop_db/: db_hierarchy_base.expected  db_hierarchy_new_users.expected
t/expected/print_hierarchy/: after_delete.expected  after_parent_bank_change.expected  before_parent_bank_change.expected  custom_small_tie_parsable.txt  help_message.txt  small_no_tie.txt  small_no_tie_parsable.txt  small_tie.txt  small_tie_all.txt  small_tie_all_parsable.txt  small_tie_parsable.txt
t/expected/sample_payloads/: same_fairshare.json  small_no_tie.json  small_tie.json  small_tie_all.json
t/expected/test_dbs/: FluxAccountingv0-10-0.db  FluxAccountingv0-11-0.db  FluxAccountingv0-12-0.db  FluxAccountingv0-13-0.db  FluxAccountingv0-14-0.db  FluxAccountingv0-15-0.db  FluxAccountingv0-16-0.db  FluxAccountingv0-17-0.db  FluxAccountingv0-18-0.db  FluxAccountingv0-19-0.db  FluxAccountingv0-25-0.db  FluxAccountingv0-37-0.db  FluxAccountingv0-39-0.db  FluxAccountingv0-40-0.db  FluxAccountingv0-45-0.db  FluxAccountingv0-46-0.db  FluxAccountingv0-47-0.db  FluxAccountingv0-49-0.db  FluxAccountingv0-51-0.db  FluxAccountingv0-54-0.db  FluxAccountingv0-55-0.db  FluxAccountingv0-56-0.db  FluxAccountingv0-57-2-1.db  FluxAccountingv0-58-0.db  FluxAccountingv0-59-0.db  out_of_insert_order.db  small_no_tie.db  small_tie.db  small_tie_all.db  small_tie_zero_shares.db
t/python/: t1000-example.py  t1001_db.py  t1002_user_cmds.py  t1003_bank_cmds.py  t1004_queue_cmds.py  t1005_project_cmds.py  t1006_job_archive.py  t1007_formatter.py  t1008_banks_output.py  t1008_users_output.py  t1009_users_output.py  t1010_issue631.py  t1011_priorities.py  t1012_visuals.py  t1013_issue802.py  t1014_clear_usage.py  t1015_issue815.py  t1016_issue853.py  t1017_config_cmds.py  t1018_job_usage_custom_bins.py  t1019_recalculate_usage.py  t1020_edit_user_properties.py  t1021_bank_info.py  t1022_job_record_ncores_ngpus.py  t1023_weighted_usage.py
t/rc/: rc1-job  rc1-kvs  rc3-kvs
t/scripts/: check_db_info.py  create_job_archive_db.py  create_test_db.py  db_integrity_check.py  insert_jobs.py  modify_accounting_db.py  query.py  send_payload.py  submit_as.py  update_duration_column.py  update_usage_column.py
t/sharness.d/: 01-setup.sh  flux-accounting.sh  flux-sharness.sh
t/valgrind/: valgrind.supp
(+177 files in other folders)
